--- a/css/index.css
+++ b/css/index.css
@@ -1,175 +1,279 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Roboto:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Roboto:wght@400;500&display=swap");
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 body {
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 :root {
-    /* FONTS */
-    --primary-font: "Poppins", sans-serif;
-    --secondary-font: "Roboto", sans-serif;
-    --major-contrast-weight: 600;
-    --medium-contrast-weight: 500;
-    --minor-contrast-weight: 400;
+  /* FONTS */
 
-    /* COLORS */
-    --primary-clr: #06626F;
-    --main-clr: #72F2EB;
-    --main-black-clr: #0E0E0E;
-    --main-clr-var1: #38D0C8;
-    --secondary-gradient: linear-gradient(to bottom, var(--main-clr), #28BBB3);
+  --primary-font: "Poppins", sans-serif;
+  --secondary-font: "Roboto", sans-serif;
+  --major-contrast-weight: 600;
+  --medium-contrast-weight: 500;
+  --minor-contrast-weight: 400;
+
+  /* COLORS */
+
+  /* main scales */
+  --primary-clr: #72f2eb;
+  --secondary-clr: #06626f;
+  --terciary-clr: #c9fff4;
+
+  /* gray scale */
+  --primary-black-clr: #0e0e0e;
+  --secondary-black-clr: #1a1a1a;
+  --terciary-black-clr: #2e2e2e;
+  --primary-white-clr: #f7f7f7;
+  --secondary-white-clr: #dedede;
+  --terciary-white-clr: #9c9c9c;
+
+  /*gradients*/
+  --primary-gradient: linear-gradient(to bottom, var(--primary-clr), #38d0c8);
+  --secondary-gradient: linear-gradient(to bottom, var(--primary-clr), #28bbb3);
+  --terciary-gradient: linear-gradient(
+    to bottom,
+    var(--primary-white-clr),
+    var(--secondary-white-clr)
+  );
 }
 
 /* ===== NAVBAR ====== */
 
 .bar {
-    height: 3px;
-    width: 100%;
-    background-color: white;
-    border-radius: 10px;
+  height: 3px;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
 }
 
 nav {
-    background-color: var(--primary-clr);
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+  background-color: var(--secondary-clr);
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 nav .logo img {
-    height: 1.5rem;
-    margin: .75rem 1rem;
+  height: 1.5rem;
+  margin: 0.75rem 1rem;
 }
 
 .navbar-links {
-    display: none;
+  display: none;
 }
 
-.navbar-links ul{
-    list-style: none;
-    display: flex;
-    flex-direction: column; 
-    width: 100%;
+.navbar-links ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .navbar-links a {
-    color: white;
-    font-family: var(--primary-font);
-    text-decoration: none;
-    font-weight: var(--medium-contrast-weight);
-    display: block;
+  color: white;
+  font-family: var(--primary-font);
+  text-decoration: none;
+  font-weight: var(--medium-contrast-weight);
+  display: block;
 }
 
-.navbar-links ul li{
-    text-align: center;
-    width: 100%;
-    margin: auto;
-    padding: .5em;
-    display: block;
+.navbar-links ul li {
+  text-align: center;
+  width: 100%;
+  margin: auto;
+  padding: 0.5em;
+  display: block;
 }
 
 .navbar-links li:active {
-    background-color: var(--main-clr);
+  background-color: var(--primary-clr);
 }
 
 .navbar-links a img {
-    height: 0.6rem;
-    transform: translate(25%, 75%);
-    position: absolute;
+  height: 0.6rem;
+  transform: translate(25%, 75%);
+  position: absolute;
 }
 
 .toggle-btn {
-    position: absolute;
-    top: .75rem;
-    right: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 21px;
+  position: absolute;
+  top: 0.75rem;
+  right: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
 }
 
 .active {
-    display: flex;
+  display: flex;
 }
 
 /* ==== HEADER ==== */
 header {
-    min-height: 30rem;
-    font-family: var(--primary-font);
-    color: white;
-    background-color: var(--main-black-clr);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* background-image: url("/home/pabloide2020/Documentos/SparkleSorrisos/imgs/smile-home.jpg"); */
+  min-height: 30rem;
+  font-family: var(--primary-font);
+  color: white;
+  background-color: var(--primary-black-clr);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* background-image: url("/home/pabloide2020/Documentos/SparkleSorrisos/imgs/smile-home.jpg"); */
 }
 
 header h1 {
-    font-weight: var(--major-contrast-weight);
-    font-size: clamp(2.5rem, 5vw + 1rem, 5rem);
-    max-width: 10ch;
-    line-height: 1.1;
-    text-align: center;
-    margin-top: 7rem;
-    margin-bottom: 3.5rem;
-    min-height: clamp(6rem, 15vw + 2rem, 13rem);
-    position: relative;
-    padding-top: .30rem;
-    overflow-y: hidden;
+  font-weight: var(--major-contrast-weight);
+  font-size: clamp(2.5rem, 5vw + 1rem, 5rem);
+  max-width: 10ch;
+  line-height: 1.1;
+  text-align: center;
+  margin-top: 7rem;
+  margin-bottom: 3.5rem;
+  min-height: clamp(6rem, 15vw + 2rem, 13rem);
+  position: relative;
+  padding-top: 0.3rem;
+  overflow-y: hidden;
 }
 
-header h1::before {
-    content: '';
-    width: 20%;
-    height: .30rem;
-    background-image: var(--secondary-gradient);
-    position: absolute;
-    top: 0;
-    border-radius: 4px;
+.blue-line::before {
+  content: "";
+  width: 20%;
+  height: 0.3rem;
+  background-image: var(--secondary-gradient);
+  position: absolute;
+  top: 0;
+  border-radius: 4px;
 }
 
 .man-smile {
-    display: none;
+  display: none;
 }
 
-.action-btn{
-    text-decoration: none;
-    color: var(--main-black-clr);
-    background-image: linear-gradient(to bottom, var(--main-clr), var(--main-clr-var1));
-    padding: .25rem .75rem;
-    border-radius: 5px;
-    font-family: var(--primary-font);
-    font-weight: var(--medium-contrast-weight);
-    font-size: 1.1rem;
-    display: flex;
-    justify-content: center;
+.action-btn {
+  text-decoration: none;
+  color: var(--primary-black-clr);
+  background-image: var(--primary-gradient);
+  padding: 0.25rem 0.75rem;
+  border-radius: 5px;
+  font-family: var(--primary-font);
+  font-weight: var(--medium-contrast-weight);
+  font-size: 1.1rem;
+  display: flex;
+  justify-content: center;
 }
 
 .action-btn:active {
-    filter: brightness(150%);
+  filter: brightness(150%);
 }
 
 .action-btn img {
-    transform: translateY(25%);
-    height: 1.1rem;
-    margin-left: .5rem;
+  transform: translateY(25%);
+  height: 1.1rem;
+  margin-left: 0.5rem;
 }
 
 header div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .dot {
-    color: var(--main-clr);
+  color: var(--primary-clr);
+}
+
+/* ===== Section DIFERENTIALS ===== */
+
+.differentials {
+  margin-top: min(20%, 7rem);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.secondary-title {
+  font-family: var(--primary-font);
+  font-weight: var(--major-contrast-weight);
+  font-size: clamp(2rem, 2vw + 1rem, 3rem);
+  position: relative;
+}
+
+.secondary-title.blue-line::before {
+  height: .35rem;
+  width: 3ch;
+}
+
+.differentials h3 {
+  font-family: var(--primary-font);
+  font-weight: var(--major-contrast-weight);
+  color: var(--primary-black-clr);
+  margin-top: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.differentials p {
+  font-family: var(--secondary-font);
+  font-weight: var(--minor-contrast-weight);
+  color: var(--terciary-black-clr);
+}
+
+p span {
+  font-weight: var(--medium-contrast-weight);
+  color: var(--primary-black-clr);
+}
+
+.bg-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  position: relative;
+  padding-bottom: 1em;
+}
+
+.differentials .card {
+  background-color: var(--primary-white-clr);
+  padding: 1.5em;
+  margin-top: 2rem;
+  max-width: min(90%, 21.875rem);
+  min-height: min(80vh, 31.25rem);
+  border-radius: 5px;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.15);
+  position: relative;
+}
+
+.differentials .card::after {
+    content: '';
+    position: absolute;
+    height: .25rem;
+    width: 85%;
+    background-image: var(--secondary-gradient);
+    bottom: 0;
+    z-index: 1;
+    left: 50;
+    transform: translate(0%, -350%);
+    border-radius: 4px;
+}
+
+.bg-cards::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    height: 80%;
+    width: 100%;
+    background-color: var(--secondary-clr);
+    transform: translateY(calc(-50% + .5em));
+}
+
+.middle {
+    margin: 0 5vw;
 }
