--- a/css/index.css
+++ b/css/index.css
@@ -67,7 +67,9 @@ nav .logo img {
 }
 
 .navbar-links {
-  display: none;
+  display: hidden;
+  max-height: 0;
+  transition: all .5s ease;
 }
 
 .navbar-links ul {
@@ -98,9 +100,10 @@ nav .logo img {
 }
 
 .navbar-links a img {
-  height: 0.6rem;
+  max-height: 0;
   transform: translate(25%, 75%);
   position: absolute;
+  transition: all .3s ease;
 }
 
 .toggle-btn {
@@ -116,6 +119,11 @@ nav .logo img {
 
 .active {
   display: flex;
+  max-height: 20rem;
+}
+
+.active a img {
+  max-height: 0.6rem;
 }
 
 /* ==== HEADER ==== */
@@ -455,4 +463,77 @@ p span {
 
 .building {
   display: none;
+}
+
+/* ==== Section FAQ*/
+
+.faq {
+  display: flex;
+  flex-direction: column;
+  margin: 2.5rem auto;
+  width: 90vw;
+}
+
+.faq h3 {
+  font-family: var(--primary-font);
+  font-weight: var(--medium-contrast-weight);
+  font-size: 1rem;
+}
+
+.faq-question {
+  /* cursor: pointer; */
+  margin: 0 auto;
+}
+
+.question {
+  display: flex;
+  background-image: var(--terciary-gradient);
+  justify-content: space-between;
+  align-items: center;
+  padding: .25em .5em;
+  margin-top: 1rem;
+  border-radius: 5px;
+  transition: all .3s ease;
+  width: 90vw;
+}
+
+.answer {
+  max-height: 0;
+  overflow: hidden;
+  font-family: var(--secondary-font);
+  font-weight: var(--minor-contrast-weight);
+  font-size: .8rem;
+  padding: .25em .5em;
+  color: white;
+  border-radius: 0px 0px 5px 5px;
+  transition: all 0.3s ease;
+  line-height: 1.5;
+}
+
+.answer span {
+  font-weight: var(--medium-contrast-weight);
+  color: white;
+}
+
+.question img {
+  height: 7.5px;
+  width: 15px;
+  flex-shrink: 0;
+  transition: all .3s ease;
+}
+
+.question-active img {
+  transform: rotate(180deg);
+}
+
+.question-active .question{
+  background-image: none;
+  background-color: var(--secondary-clr);
+  color: white;
+  border-radius: 5px 5px 0px 0px;
+}
+
+.question-active .answer{
+  max-height: 300px;
+  background-color: var(--secondary-clr);
 }
