--- a/css/index.css
+++ b/css/index.css
@@ -45,7 +45,6 @@ body {
   );
 }
 
-
 /* ===== NAVBAR ====== */
 
 .bar {
@@ -74,7 +73,7 @@ nav .logo img {
 .navbar-links {
   display: hidden;
   max-height: 0;
-  transition: all .5s ease;
+  transition: all 0.5s ease;
 }
 
 .navbar-links ul {
@@ -109,7 +108,7 @@ nav .logo img {
   max-height: 0;
   transform: translate(25%, 75%);
   position: absolute;
-  transition: all .3s ease;
+  transition: all 0.3s ease;
 }
 
 .toggle-btn {
@@ -137,7 +136,7 @@ nav .logo img {
   display: hidden;
   max-height: 0px;
   padding: 0em;
-  transition: all .9s ease;
+  transition: all 0.9s ease;
 }
 
 #dropdown-list a {
@@ -149,20 +148,18 @@ nav .logo img {
   background-color: var(--secondary-clr);
 }
 
-.drop-rotate img{
+.drop-rotate img {
   transform: rotate(180deg) translate(-25%, -75%) !important;
 }
 
-
 .drop-active {
-  max-height: 50rem !important; 
+  max-height: 50rem !important;
   overflow: hidden;
 }
 
 /*Responsiveness*/
 
 @media (min-width: 50em) {
-  
   .toggle-btn {
     display: none;
   }
@@ -172,12 +169,12 @@ nav .logo img {
     justify-content: space-between;
     align-items: center;
   }
-  
+
   .logo {
     margin-left: 4rem;
   }
 
-  .navbar-links a img, 
+  .navbar-links a img,
   .navbar-links {
     max-height: 50rem;
   }
@@ -185,6 +182,7 @@ nav .logo img {
   .navbar-links {
     display: flex;
     max-width: 70%;
+    margin-right: 4rem;
   }
 
   .navbar-links ul {
@@ -195,11 +193,11 @@ nav .logo img {
     padding: 1em 1.5em;
     width: auto;
     position: relative;
-    margin-right: 4rem;
+    margin-right: 1rem;
   }
 
   .navbar-links ul li::after {
-    content: '';
+    content: "";
     width: 0%;
     height: 2px;
     background-color: white;
@@ -207,7 +205,7 @@ nav .logo img {
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-    transition: all .3s ;
+    transition: all 0.3s;
   }
 
   .navbar-links ul li:hover::after {
@@ -229,11 +227,11 @@ nav .logo img {
     background-color: var(--secondary-clr);
     border-radius: 0px 0px 5px 5px;
     z-index: 100;
-    transition: max-height .9s ease;
+    transition: max-height 0s ease;
   }
 
   .drop-active {
-    transform: translateX(-125%);
+    transform: translateX(-130%);
   }
 
   #dropdown-list:active {
@@ -252,14 +250,13 @@ nav .logo img {
     margin: initial;
   }
 
-  #dropdown-list ul{
+  #dropdown-list ul {
     flex-direction: column;
   }
 
   .show-drop {
     position: relative;
   }
-
 }
 
 /* ==== HEADER ==== */
@@ -316,7 +313,8 @@ header h1 {
 }
 
 .action-btn:active {
-  filter: brightness(150%);
+  background-image: none;
+  background-color: var(--secondary-clr);
 }
 
 .action-btn img {
@@ -336,10 +334,52 @@ header div {
   color: var(--primary-clr);
 }
 
+/*Responsiveness*/
+
+@media (min-width: 75em) {
+  .man-smile {
+    display: block;
+    position: absolute;
+    border-radius: 5px;
+    right: 0;
+    top: 0;
+    width: 32rem;
+    height: 35rem;
+    transform: translate(-4rem, 10.5rem);
+    background-image: url("../imgs/smile-home.jpg");
+    background-size: cover;
+  }
+
+  header {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    position: relative;
+    min-height: max(55vh, 35rem);
+  }
+
+  header h1 {
+    text-align: left;
+  }
+
+  .action-btn {
+    padding: 0.5em 1.5em;
+  }
+
+  .action-btn:hover {
+    filter: brightness(150%);
+  }
+
+  header div {
+    margin-left: 4rem;
+    align-items: flex-start;
+  }
+}
+
 /* ===== Section DIFFERENTIALS ===== */
 
 .differentials {
-  margin-top: min(20%, 7rem);
+  margin-top: min(20%, 12rem);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -353,7 +393,7 @@ header div {
 }
 
 .secondary-title.blue-line::before {
-  height: .35rem;
+  height: 0.35rem;
   width: 3ch;
 }
 
@@ -397,30 +437,42 @@ p span {
 }
 
 .differentials .card::after {
-    content: '';
-    position: absolute;
-    height: .25rem;
-    width: 85%;
-    background-image: var(--secondary-gradient);
-    bottom: 0;
-    z-index: 1;
-    left: 50;
-    transform: translate(0%, -350%);
-    border-radius: 4px;
+  content: "";
+  position: absolute;
+  height: 0.25rem;
+  width: 85%;
+  background-image: var(--secondary-gradient);
+  bottom: 0;
+  z-index: 1;
+  left: 50;
+  transform: translate(0%, -350%);
+  border-radius: 4px;
 }
 
 .bg-cards::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    height: 80%;
-    width: 100%;
-    background-color: var(--secondary-clr);
-    transform: translateY(calc(-50% + .5em));
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  height: 80%;
+  width: 100%;
+  background-color: var(--secondary-clr);
+  transform: translateY(calc(-50% + 0.5em));
 }
 
 .middle {
-    margin: 0 5vw;
+  margin: 0 5vw;
+}
+
+/*Responsiveness*/
+@media (min-width: 75em) {
+  .differentials {
+    align-items: flex-start;
+  }
+
+  .differentials .secondary-title {
+    margin-left: 4rem;
+  }
 }
 
 /* ======== Section TESTIMONIALS ========== */
@@ -455,7 +507,7 @@ p span {
   font-family: var(--primary-font);
   font-weight: var(--medium-contrast-weight);
   color: var(--secondary-clr);
-  margin-top: .25rem;
+  margin-top: 0.25rem;
 }
 
 .testimonials h2 {
@@ -467,6 +519,38 @@ p span {
   margin: 0 auto;
 }
 
+/*Responsiveness*/
+@media (min-width: 75em) {
+  .dps {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 6rem;
+  }
+
+  .dps img {
+    display: block;
+  }
+
+  .text-testimonials {
+    width: 60%;
+    margin-bottom: 0px;
+    padding-left: 3rem;
+  }
+
+  .text-testimonials p {
+    font-size: 1.60rem;
+    margin-top: 2rem;
+  }
+
+  .text-testimonials h3 {
+    font-size: 2rem;
+  }
+
+  .text-testimonials .secondary-title {
+    align-self: flex-start;
+    margin-bottom: 0rem;
+  }
+}
 /*===== specialties =====*/
 
 .specialties {
@@ -497,14 +581,14 @@ p span {
   flex-direction: column;
   background-color: var(--secondary-clr);
   width: min(45%, 21.25rem);
-  padding: .5em;
+  padding: 0.5em;
   border-radius: 5px;
   box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.25);
   position: relative;
 }
 
 .specialties-cards .card::after {
-  content: '';
+  content: "";
   position: absolute;
   height: 3px;
   width: calc(100% - 1em);
@@ -518,7 +602,7 @@ p span {
   color: var(--terciary-clr);
   font-family: var(--secondary-font);
   font-weight: var(--medium-contrast-weight);
-  font-size: 1.5rem ;
+  font-size: 1.5rem;
   margin-top: 1rem;
   margin-bottom: 3rem;
 }
@@ -539,6 +623,30 @@ p span {
   background-color: var(--primary-clr);
 }
 
+/*Responsiveness*/
+
+@media (min-width: 75em) {
+  .specialties .secondary-title {
+    align-self: flex-start;
+    margin-left: 4rem;
+  }
+
+  .specialties-cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 90rem;
+  }
+
+  .specialties-cards .card {
+    margin: 1.5rem 1.5rem;
+  }
+
+  .specialties .card a:hover {
+    background-color: white;
+  }
+}
+
 /* ======== Section ABOUT ======== */
 
 .about {
@@ -549,7 +657,7 @@ p span {
   padding: 1rem;
 }
 
-.about-txt h2{
+.about-txt h2 {
   color: white;
   font-family: var(--primary-font);
 }
@@ -558,7 +666,7 @@ p span {
   color: var(--terciary-white-clr);
   font-family: var(--secondary-font);
   line-height: 1.5;
-  margin-top: .75rem;
+  margin-top: 0.75rem;
   margin-bottom: 1.75rem;
 }
 
@@ -583,12 +691,12 @@ p span {
 }
 
 .icon-txt img {
- min-width: 38px;
+  min-width: 38px;
 }
 
 .border-line {
   height: 2px;
-  width: min(70%,320px);
+  width: min(70%, 320px);
   background-color: var(--secondary-black-clr);
   margin: 1rem 0;
 }
@@ -599,6 +707,35 @@ p span {
 
 .building {
   display: none;
+}
+
+/*Responsiveness*/
+@media (min-width: 75em) {
+  .building {
+    position: absolute;
+    display: block;
+    height: 40rem;
+    z-index: 200;
+    left: 4rem;
+    transform: translateY(-85%);
+    border-radius: 5px;
+  }
+
+  
+  .about {
+    margin-top: 10rem;
+    flex-wrap: nowrap;
+    position: relative;
+    justify-content: flex-end;
+  }
+
+  .about-txt {
+    max-width: calc(100% - 37rem);
+  }
+
+  .about .action-btn {
+    width: 40%;
+  }
 }
 
 /* ==== Section FAQ*/
@@ -617,7 +754,6 @@ p span {
 }
 
 .faq-question {
-  /* cursor: pointer; */
   margin: 0 auto;
 }
 
@@ -626,10 +762,10 @@ p span {
   background-image: var(--terciary-gradient);
   justify-content: space-between;
   align-items: center;
-  padding: .25em .5em;
+  padding: 0.25em 0.5em;
   margin-top: 1rem;
   border-radius: 5px;
-  transition: all .3s ease;
+  transition: all 0.3s ease;
   width: 90vw;
 }
 
@@ -638,8 +774,8 @@ p span {
   overflow: hidden;
   font-family: var(--secondary-font);
   font-weight: var(--minor-contrast-weight);
-  font-size: .8rem;
-  padding: .25em .5em;
+  font-size: 0.8rem;
+  padding: 0.25em 0.5em;
   color: white;
   border-radius: 0px 0px 5px 5px;
   transition: all 0.3s ease;
@@ -655,23 +791,42 @@ p span {
   height: 7.5px;
   width: 15px;
   flex-shrink: 0;
-  transition: all .3s ease;
+  transition: all 0.3s ease;
 }
 
 .question-active img {
   transform: rotate(180deg);
 }
 
-.question-active .question{
+.question-active .question {
   background-image: none;
   background-color: var(--secondary-clr);
   color: white;
   border-radius: 5px 5px 0px 0px;
 }
 
-.question-active .answer{
+.question-active .answer {
   max-height: 300px;
   background-color: var(--secondary-clr);
+}
+
+/*Responsiveness*/
+@media (min-width: 75em) {
+  .faq {
+    margin-top: 10rem;
+  }
+
+  .faq-question {
+    cursor: pointer;
+  }
+
+  .question h3 {
+    font-size: 1.2rem;
+  }
+
+  .answer p {
+    font-size: 1rem;
+  }
 }
 
 /* ========= FOOTER ========== */
@@ -679,7 +834,7 @@ footer {
   display: flex;
   flex-wrap: wrap;
   background-color: var(--primary-black-clr);
-  padding: .25em 1em;
+  padding: 0.25em 1em;
 }
 
 .contact {
@@ -715,7 +870,7 @@ footer p {
 
 .localization {
   align-self: center;
-  padding-bottom: .75em;
+  padding-bottom: 0.75em;
 }
 
 .localization img {
@@ -725,7 +880,56 @@ footer p {
 }
 
 .localization p {
-  margin-top: .35rem;
+  margin-top: 0.35rem;
   margin-bottom: 1.5rem;
   text-align: center;
+}
+
+/*Responsiveness*/
+@media (min-width: 75em) {
+  footer {
+    width: 100%;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    position: relative;
+    padding: .25em 4rem;
+  }
+  
+  footer .border-line {
+    width: unset;
+    height: 30rem;
+    border-left: 2px solid var(--secondary-black-clr);
+  }
+
+  .localization {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 40%;
+    padding-top: 1em;
+  }
+
+  .contact {
+    max-width: 50%;
+  }
+
+  .contact h2 {
+    margin-bottom: 2rem;
+  }
+
+  footer p {
+    font-size: 1rem;
+  }
+
+  .midias {
+    position: absolute;
+    margin-top: 30%;
+    bottom: 2rem;
+    left: 4rem;
+  }
+
+  .midias a {
+    margin-right: 3rem;
+  }
 }
